This is FusionInventory Agent Task Deploy changelog:

2.0.3  Thu, 13 Sep 2012 12:18:53 +0200

* Don't give up if download failed, but retry 5 times in a row
* Fix P2P on Linux

2.0.2  Wed, 30 May 2012 17:38:18 +0200

* Win32: properly support non ASCII characters
* use Win32::Job on Windows to get the full return code
* Win32: better Registry key check
* refresh the test-suite
* CheckProcessor: ensure a code is always returned

2.0.1  Thu, 26 Apr 2012 20:55:58 +0200

* Use 7z if avalaible to extract the archives
* fix a segfault on Windows with registry key value check (#1621)
* P2P: fix the IP range computation on Windows
* fix a typo in the package description (#1592),
* fix some warnings in the test-suite (#1591) and thus some hidden
  regression in code not used so far

2.0.0  Sun, 08 Apr 2012 21:05:59 +0200

9543480 increase end user log verbosity
412483c drop a debug print
f7ba5bd POE::C:C::TCP needs ServerInput callback to load
f46a753 log the reason why P2P.pm loading failed
27a9c7b drop an useless debug() call
fcc2766 conditional Tools::Win32 loading
64236c3 pass $logger to CheckProcessor
a037fff as decided getRegistry*() expect a path with / only
9df475e getFreeSpaceWindows: accept only a drive letter+:
3eb802c avoid a failure if mkdir is done on an existing dir
1c39423 various fixes in the CheckProcessor
5df4c05 improve the log format
b8d26cb fix: support the lastAPI changes from the agent
ca2fbe1 increase the size of the default log size to 10 lines
1ee5583 fix: retention_duration instead of retentionDuration
5723cc5 initialize files->checks
16274e4 Merge remote-tracking branch 'origin/master'
8192380 clean up
167fde2 move the disk free part in DiskFree.pm
eb4181c make perlcritic happy
210e758 various small syntax harmonisation
92bfb5d minor cleanup
3e6178d don't set default values deep in the code, but right from the constructor
791059a simplification
e8097d3 use plain english name for magic variables
290481d drop unused variables